workspace/log/build_2023-10-09_20-07-49/template_drone_control/stderr.log
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp: In constructor ‘TemplateDroneControl::TemplateDroneControl()’:
/home/lrs-ubuntu/Desktop/LRS/LRS-FEI/workspace/src/template_drone_control/src/template_drone_control_node.cpp:48:31: error: expected ‘;’ before ‘auto’
   48 |         set_armed.value = true
      |                               ^
      |                               ;
   49 |         auto result_arm = arming_client_>async_send_request(std::make_shared<mavros_msgs::srv::CommandBool::Request>(set_armed));
      |         ~~~~                   
make[2]: *** [CMakeFiles/template_drone_control_node.dir/build.make:63: CMakeFiles/template_drone_control_node.dir/src/template_drone_control_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:105: CMakeFiles/template_drone_control_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
